@@ -122,6 +122,7 @@ LEGAL_VALUES = {
         'fi': 'Finnish',
         'fr': 'French',
         'gl': 'Galician',
+        'he': 'Hebrew',
         'hi': 'Hindi',
         'hr': 'Croatian',
         'hu': 'Hungarian',
@@ -171,6 +172,7 @@ LEGAL_VALUES = {
         "fi": "Finnish",
         "fr": "French",
         "gl": "Galician",
+        "he": "Hebrew",
         "hi": "Hindi",
         "hr": "Croatian",
         "hu": "Hungarian",
@@ -222,6 +224,7 @@ LEGAL_VALUES = {
         fa='fa',
         fi='fi',
         fr='fr',
+        he='he',
         hr='hr',
         hu='hu',
         id='id',
@@ -268,6 +271,7 @@ LEGAL_VALUES = {
         fr='fr',
         gl='gl',
         hi='hi',
+        he='he',
         hr='hr',
         hu='hu',
         id='id',
@@ -331,6 +335,7 @@ LEGAL_VALUES = {
         'fi': 'fi',
         'fr': 'fr',
         'gl': 'gl',
+        'he': 'he',
         'it': 'it',
         'ja': 'ja',
         'lt': 'lt',
