@@ -14,8 +14,9 @@ Bugfixes
 Features
 --------
 
+* Add Hebrew translation by Yitzhak Bar Geva
+* Add Chinese (Traditional) ``zh_TW`` translation by Po-Wen Chi
 * Add ``nikola theme --list-installed`` (Issue #2504)
-* Add Chinese (Traditional) ``zh_TW`` locale by Po-Wen Chi
 * Add ``KATEX_AUTO_RENDER`` setting to configure math delimiters
 * Update KaTeX version to 0.6.0: support aligned math display
 * Better support for a tree of files in ``data/``
